fixed spacing on home page, tweaked colors, filled out WKND and MAG sections, extended more from box for YTV

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,6 @@ $wild-sand: #f6f4f4;
   position: absolute;
   letter-spacing: 0.1em;
   font-size: .75em;
-  color: $dove-gray;
   margin-left: 15px;
 }
 
@@ -72,12 +71,12 @@ $gutter-size: 38.5px;
 $card-border-width: 3px;
 $university-color: #2882C8;
 $opinion-color: #cf383e;
-$city-color: #00beb4;
-$scitech-color: #ffdc00;
+$city-color: #00be64;
+$scitech-color: #f7ca18;
 $sports-color:#42d2ff;
-$ytv-color: #fe9e48;
-$weekend-color: #ff050a;
-$magazine-color: #bef0b4;
+$ytv-color: #c89664;
+$weekend-color: #fe9e48;
+$magazine-color: #00b4b4;
 $culture-color: #d20a78;
 
 
@@ -244,6 +243,7 @@ footer#site-footer{
   margin-left: 15px;
 }
 
+
 .card {
   @extend .three.columns;
   background-color: white;
@@ -251,6 +251,16 @@ footer#site-footer{
   overflow: hidden;
   z-index: 2;
   border-bottom: 5px solid;
+
+  transition: all .28s cubic-bezier(.4,0,.2,1);
+
+  &:hover {
+    box-shadow: 0 3px 10px rgba(0,0,0,.23),
+              0 3px 10px rgba(0,0,0,.16);
+
+  }
+
+  
 
   &.category-jump{
     bottom: 0;
@@ -292,7 +302,7 @@ footer#site-footer{
     }
     .card-preview {
       line-height: 1.3em;
-      letter-spacing: .02em;
+      letter-spacing: .03em;
       font-weight: 300;
       margin-left: 15px;
       margin-right: 15px;
@@ -304,7 +314,6 @@ footer#site-footer{
     }
     .category{
       bottom: 15px;
-      color: $university-color;
       @extend %time-category-style;
     }
     :not(.card-image) {
@@ -322,6 +331,11 @@ footer#site-footer{
   &.story-major {
     height: 2 * $card-height + $gutter-size;
     border-bottom: none;
+
+    .card-preview {
+      line-height: 1.4em;
+      letter-spacing: 0.05em;
+    }
     h1, p, time {
       color: white;
     }
@@ -432,14 +446,12 @@ footer#site-footer{
     }
     time {
       color: white;
-      font-weight: 100;
     }
     p.category {
-      color: #eee;
-      font-weight: 400;
+      color: #bbb;
     }
     &::after {
-      @include bg-gradienter (( to right, rgba(0, 0, 0, 0.8) 0%, rgba(250, 250, 250, 0) 100% ));
+      @include bg-gradienter (( to right, rgba(25, 25, 25, 0.8) 0%, rgba(250, 250, 250, 0) 100% ));
       top: 0;
       left: 0;
       width:100%;
@@ -571,10 +583,37 @@ footer#site-footer{
       position: absolute;
     }
   }
+  &.story-weekend, &.story-mag {
+    border-bottom: none;
+    h1 {
+      color: white;
+    }
+    .card-image{
+      top: 0;
+      height: $card-height + $card-border-width;
+    }
+    time {
+      color: white;
+    }
+    p.category {
+      color: #bbb;
+    }
+    &::after {
+      background-color: rgba(25, 25, 25, 0.6);
+      
+      top: 0;
+      left: 0;
+      width:100%;
+      height:100%;
+      content: "";
+      position: absolute;
+    }
+  }
 }
 
 section.category {
   padding: 2em 0;
+  margin-top: 125px;
 
   clear: both;
   width: 100%;
@@ -593,20 +632,17 @@ section.category {
   } 
 }
 
-section.opinion {
-  margin-bottom: 75px;
-}
-
 a.link-wrap{
   display: block;
 }
 
 section.front-page {
   margin-top: 0px;
+  margin-bottom: -50px;
 }
 
 section.ytv {
-  margin-top: 70px;
+  margin-top: 125px;
 
   .container {
     margin-top: 0;
@@ -615,7 +651,25 @@ section.ytv {
   h2 {
     margin-bottom: 30px;
   }
+
+   .category-jump {
+      width: 100%;
+      padding: 10px 15px 15px 15px;
+      height: 50px;
+
+      strong {
+        margin-left: 5px;
+        display: inline;
+        font-size: 24px;
+        padding: 0;
+      }
+    }
 }
+
+  section.magazine {
+    margin-top: 30px;
+    margin-bottom: -135px;
+  }
 
 section.magazine, section.weekend {
   h2 {
@@ -626,6 +680,7 @@ section.magazine, section.weekend {
 }
 
 section.weekend {
+  margin-top: 25px;
   .story-softcore-cover {
     margin-bottom: -40px;
   }
@@ -651,6 +706,7 @@ section.weekend {
     letter-spacing: .05em;
     @extend %face-serif;
   }
+  
 
   .byline {
     color: white;
@@ -659,7 +715,7 @@ section.weekend {
   }
 
   &::after {
-    @include bg-gradienter (( to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100% ));
+    @include bg-gradienter (( to bottom, rgba(0, 0, 0, 0) 0%, rgba(25, 25, 25, 1) 100% ));
     top: 0;
     left: 0;
     width:100%;
@@ -671,7 +727,7 @@ section.weekend {
 
 .section-wrap {
   padding: 5px 0 50px 0;
-  background-color: black;
+  background-color: #191919;
 }
 
 /// ARTICLE PAGE STUFF
@@ -804,12 +860,35 @@ section.weekend {
     margin-top: 40px;
   }
 
+  section.ytv {
+    margin-top: -50px;
+    margin-bottom: 50px;
 
-  section.magazine, section.weekend {
+    & > h2 {
+      margin-left: 35px;
+    }
+  }
+
+  section.magazine, section.weekend, section.ytv {
     width: 100%;
   }
 
+  section.magazine {
+    margin-bottom: -60px;
+
+    & > h2 {
+      margin-left: 35px;
+    }
+  }
+
+
+
   section.weekend {
+
+    margin-bottom: 50px;
+    & > h2 {
+      margin-left: 30px;
+    }
     .story-softcore-cover {
       margin-bottom: auto;
     }
@@ -841,6 +920,7 @@ section.weekend {
       height: auto;
       font-style: italic;
 
+
       strong {
         font-family: 'Avenir';
         text-transform: uppercase;
@@ -858,9 +938,6 @@ section.weekend {
 
     .card-preview {
       font-size: 1em;
-      letter-spacing: 0.02em !important;
-
-
     }
 
     &.story {
@@ -897,6 +974,19 @@ section.weekend {
         color:$dark-gray;
       }
     }
+
+    &.story-softcore {
+        width: 100%;
+        height: 203px;
+        background-color: white;
+
+        .card-image {
+          display: block;
+          width: 100%;
+
+        }
+      }
+
     &.story-major, &.story-opinion {
       width: 100%;
       height: 0;
@@ -911,6 +1001,8 @@ section.weekend {
         width: 100%;
         height: 100%;
       }
+
+
     }
 
 
@@ -985,6 +1077,10 @@ section.weekend {
         }
       }
     }
+  }
+
+  .story-softcore-cover {
+    margin-top: -100px;
   }
 
   
@@ -1104,9 +1200,6 @@ form input {
   .story .category {
     color:$opinion-color;
   }
-  .card{
-    border-bottom: thick solid $opinion-color;
-  }
   color: $opinion-color !important;
 }
 
@@ -1141,7 +1234,7 @@ form input {
     background-color: $culture-color;
   } 
   .story .category {
-    color:$culture-color;
+    color:$culture-color !important;
   }
   .card {
     border-bottom: thick solid $culture-color;
